--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -3,5 +3,7 @@
   "singleQuote": true,
   "tabWidth": 2,
   "useTabs": false,
-  "bracketSpacing": false
+  "bracketSpacing": false,
+  "printWidth": 40,
+  "jsxSingleQuote": true
 }
