--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -5,5 +5,7 @@
   "useTabs": false,
   "bracketSpacing": false,
   "printWidth": 80,
-  "jsxSingleQuote": true
+  "jsxSingleQuote": true,
+  "plugins": ["prettier-plugin-tailwindcss"],
+  "tailwindStylesheet": "./src/index.css"
 }
