--- a/backend/modules/auth-server/tsconfig.json
+++ b/backend/modules/auth-server/tsconfig.json
@@ -1,7 +1,8 @@
 {
   "compilerOptions": {
     "outDir": "./dist" /* Redirect output structure to the directory. */,
-    "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    // "rootDir": "./src" /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */,
+    "rootDir": "../..",
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "sourceMap": true /* Generates corresponding '.map' file. */,
     "target": "ESNext" /* Set the JavaScript language version for emitted JavaScript and included TypeScript declarations. */,
@@ -11,8 +12,13 @@
     "strict": true /* Enable all strict type-checking options. */,
     "noImplicitAny": true /* Enable error reporting for expressions and declarations with an implied 'any' type. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    "resolveJsonModule": true /* Include modules imported with '.json' extension. */
+    "resolveJsonModule": true /* Include modules imported with '.json' extension. */,
+    "composite": true /* Enable project references. */,
+    "baseUrl": "../.." /* Base directory to resolve non-absolute module names. */,
+    "paths": {
+      "types/*": ["shared/types/*"]
+    }
   },
-  "include": ["./src/**/*.ts", "./*.js"],
+  "include": ["../../shared/**/*.ts", "./src/**/*.ts", "./*.js"],
   "exclude": ["node_modules", "test", "dist"]
 }
