--- a/backend/package.json
+++ b/backend/package.json
@@ -29,16 +29,21 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.20.0",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.13.1",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/node": "^22.13.9",
     "@typescript-eslint/eslint-plugin": "^8.23.0",
     "@typescript-eslint/parser": "^8.23.0",
     "eslint": "^9.20.0",
