Backend fixing, + working user registering for database

--- a/backend/modules/auth-server/tsconfig.json
+++ b/backend/modules/auth-server/tsconfig.json
@@ -16,7 +16,8 @@
     "composite": true /* Enable project references. */,
     "baseUrl": "../.." /* Base directory to resolve non-absolute module names. */,
     "paths": {
-      "types/*": ["shared/types/*"]
+      "types/*": ["shared/types/*"],
+      "utils/*": ["shared/utils/*"]
     }
   },
   "include": ["../../shared/**/*.ts", "./src/**/*.ts", "./*.js"],
