MADE THAT DAMN EXPRESS EXTENDED TYPE FINALLY WORKING

--- a/backend/modules/auth-server/tsconfig.json
+++ b/backend/modules/auth-server/tsconfig.json
@@ -18,8 +18,16 @@
     "paths": {
       "types/*": ["shared/types/*"],
       "utils/*": ["shared/utils/*"]
-    }
+    },
+    "typeRoots": ["../../shared/types"]
   },
-  "include": ["../../shared/**/*.ts", "./src/**/*.ts", "./*.js"],
+
+  // "include": ["./shared/**/*.ts", "./shared/**/*.d.ts"],
+  "include": [
+    "../../shared/**/*.ts",
+    // "../../shared/types/**/*",
+    "./src/**/*.ts",
+    "./*.js"
+  ],
   "exclude": ["node_modules", "test", "dist"]
 }
