--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,6 +14,6 @@
       "path": "./modules/media-server"
     }
   ],
-  "include": ["./shared/**/*.ts"],
+  "include": ["./shared/**/*.ts", "./shared/**/*.d.ts"],
   "exclude": ["node_modules", "test", "dist"]
 }
