Comment for using NODE_ENV

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,7 @@
+## CHANGE NODE_ENV TO production WHEN DEPLOYING TO PRODUCTION
+## ITS FOR SHOWING ERROR MESSAGES IN DEVELOPMENT AND NOT IN PRODUCTION
 NODE_ENV=development
+# NODE_ENV=production
 AUTH_SERVER_PORT=
 FILE_SERVER_PORT=
 MEDIA_SERVER_PORT=
