--- a/backend/package.json
+++ b/backend/package.json
@@ -30,6 +30,7 @@
   "type": "commonjs",
   "dependencies": {
     "@types/cors": "^2.8.17",
+    "@types/multer": "^1.4.12",
     "bcryptjs": "^3.0.2",
     "concurrently": "^9.1.2",
     "cors": "^2.8.5",
@@ -39,6 +40,7 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
