--- a/backend/modules/file-server/package.json
+++ b/backend/modules/file-server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon --exec \"ts-node -r tsconfig-paths/register\" src/index.ts",
     "build": "tsc",
-    "start": "node dist/index.js",
+    "start": "node -r tsconfig-paths/register dist/modules/file-server/src/index.js",
     "apidoc": "apidoc -c apidoc.json -o public/ -t apidoc-template"
   }
 }
